spade-tests/src/snapshots/spade_tests__typeinference__negative_second_range_index_is_error.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: [int<8>; 6]) -> [int<8>; 1] {
    x[1..-5]
}


error: Expected type [#type; #uint], got [#type; -6]
  ┌─ testinput:2:5
  │
2 │     x[1..-5]
  │     ^^^^^^^^ Expected [#type; #uint], got [#type; -6]
  │
  = note: Expected: #uint
                in: [#type; #uint]
               Got: -6
                in: [#type; -6]
